panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arithmetic__test_arithmetic_between_const_and_nonconst.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arithmetic/test_arithmetic_between_const_and_nonconst.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_arithmetic_between_const_and_nonconst.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int const` 42)
         (declaration y~3 `int` 27)
         (return (add (name x~2 `int const`) (name y~3 `int`))))))

----- stderr -----
