panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arithmetic__test_lengthof.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arithmetic/test_lengthof.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_lengthof.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression
            (generic
               (lengthof `array<int; 42>`)
               (assoc `unsigned long` 0)))
         (declaration xs~2 `array<int; ∅>`
            (braced
               1
               2))
         (expression
            (generic
               (lengthof (name xs~2 `array<int; ∅>`))
               (assoc `unsigned long` 0)))
         (return (lengthof (name xs~2 `array<int; ∅>`))))))

----- stderr -----
