panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arithmetic__test_ptrdiff_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arithmetic/test_ptrdiff_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_ptrdiff_simple.c"
   (declaration calloc~0 `fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (declaration array~3 `ptr<int>`
            (call (name calloc~0 `fn(∅: unsigned long, ∅: unsigned long) -> ptr<void>`)
               42
               (sizeof (deref (name array~3 `ptr<int>`)))))
         (declaration ptrdiff~4 `unsigned long` (subtract (addressof (subscript (name array~3 `ptr<int>`) 10)) (addressof (subscript (name array~3 `ptr<int>`) 0))))
         (return (name ptrdiff~4 `unsigned long`)))))

----- stderr -----
