panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__arithmetic__test_unary_not.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/arithmetic/test_unary_not.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arithmetic/test_unary_not.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (declaration i~5 `int` 42)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (name i~5 `int`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (not (name i~5 `int`)))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (not (not (name i~5 `int`))))))
         (declaration j~6 `int` (not (name i~5 `int`)))
         (declaration k~7 `int` (not (not (name i~5 `int`))))
         (declaration l~8 `int` (not (not (not (name i~5 `int`)))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (name j~6 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (name k~7 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (name l~8 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not 0)))
         (declaration p~9 `ptr<int>` (addressof (name i~5 `int`)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (name p~9 `ptr<int>`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (not (name p~9 `ptr<int>`)))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (not (not (name p~9 `ptr<int>`))))))
         (declaration c~10 `char` 42)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (name c~10 `char`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (not (name c~10 `char`)))))
         (declaration c2~11 `char` 0)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (name c2~11 `char`))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (not (not (name c2~11 `char`)))))
         (declaration c3~12 `char` (not 27))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (deref (add (name argv~4 `ptr<ptr<char>>`) 1))
               (name c3~12 `char`))))))

----- stderr -----
